# Growing-Good

./: .gitignore  API_DOCUMENTATION.md  Cargo.toml  PROJECT_PLAN.md  growing_good.db
growing-good-frontend/: index.html  package-lock.json  package.json
growing-good-frontend/src/: App.tsx  index.css
growing-good-frontend/src/components/: ProfileEditModal.tsx
growing-good-frontend/src/context/: AuthContext.tsx  auth-context.ts
growing-good-frontend/src/pages/: ContentDetail.tsx  Dashboard.tsx  Leaderboard.tsx  Login.tsx  Register.tsx
growing-good-frontend/src/pages/admin/: AdminCategories.tsx  AdminContent.tsx  AdminDashboard.tsx  AdminUsers.tsx
growing-good-frontend/src/services/: api.ts
growing-good-frontend/src/types/: index.ts
growing-good-frontend/src/utils/: errors.ts
src/: lib.rs  main.rs
src/api/: mod.rs  openapi.rs
src/api/middleware/: auth.rs
src/api/routes/: admin.rs  auth.rs  content.rs  mod.rs  progress.rs
src/application/: auth_service.rs  content_service.rs  game_service.rs  learning_journey_service.rs  mod.rs
src/config/: mod.rs
src/content_types/: mod.rs
src/domain/: content.rs  mod.rs  progress.rs  recommendation.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/repositories/: content_repository.rs  mod.rs  progress_repository.rs  user_repository.rs
