[package]
name = "growing-good"
version = "0.1.0"
edition = "2021"
description = "Growing Good - Children's Manners & Safety Education Platform"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# HTTP Utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# OpenAPI / Swagger
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
